# rag_mairie

./: .env.example  .gitignore  README.md  cours.md  pyproject.toml  rapport.md
Assessment/: assessment_results_20260208-130957.csv  evaluate_rag.py  test_questions.json
Chunking/: chunker.py
Corpus/: Demande d'information sur l'entretien de la voirie.docx  Demande de participation à la réunion municipale sur la revitalisation du centre-ville.docx  Festival des Rires et des Blagues.docx  Fête des Saveurs Insolites.docx  Journée de l’Insolence Créative.docx  Le Carnaval des Objets Oubliés.docx  Nuit des Arts Urbains.docx  Signalement et demande d'intervention pour un éclairage public défectueux.docx  budget_2024.csv  projets_2024.csv
Embedding/: embedder.py
Indexing/: indexer.py
Preparation/: suppr_base64.py  transformer_en_md.py
Querying/: app.py  pipeline.py  prompt_system.md  query_rag.py
